# minikanren2023

./: .gitignore  .gitmodules  Makefile  README.md  check.py  dune  dune-project
.github/workflows/: master.yml
klogic/: README.md  dune
ocaml/: appendo.ml  conjunction.ml  dune  evalo.ml  numero.ml  numero_decls.ml  perm.ml  permo_decls.ml  quines.ml  reverso.ml  scheme_interpret.ml  thrines.ml  twines.ml
ocaml/bench/: dune  expo_bench.ml  expo_bench2.ml  logo_bench.ml  numero_bench.ml  numero_decls_nolog.ml  permo_bench.ml  permo_decls_nolog.ml  quines_bench.ml  scheme_interpret_nolog.ml  thrines_bench.ml  twines_bench.ml
ocaml_ext2/: dune  hack_appendo.ml  hack_numero.ml  numero_decls_hack.ml
ocaml_ext2/bench/: dune  numero_bench_ext2.ml  numero_decls_ext2_nolog.ml  permo_bench_ext2.ml  permo_decls_ext2_nolog.ml
ocaml_ext2/fresh/: ppx_fresh.ml
racket/: appendo.rkt  debug_stuff.rkt  expo1.rkt  expo5.rkt  mk.rkt  mulo1.rkt  numbers.rkt  numbers_debug.rkt  reverso.rkt  reverso2.rkt  reverso3.rkt  reverso4.rkt
racket/bench/: Makefile  mul255x255.rkt  numero_bench.rkt
scheme/: test.rkt  test.scm
tex/: bench_table.tex  dune  make_table.ml  table.tex
unif_count/: dune  kotlin.t  ocaml.t  ocaml_ext2.t  racket.t
unif_traces/kotlin/: appendo1.kotlin.t  appendo2.kotlin.t  dune  expo1.kotlin.t  expo2.kotlin.t  expo3.kotlin.t  expo4.kotlin.t  expo5.kotlin.t  logo1.kotlin.t  mulo1.kotlin.t  odd_mulo1.kotlin.t  repeatedMulo1.kotlin.t  reverso.kotlin.t  reverso2.kotlin.t
unif_traces/ocaml/: appendo1.ml.t  appendo2.ml.t  conjunction.ml.t  dune  expo2x3.ml.t  logo1.ml.t  mulo3x3.ml.t  mulo5x5.ml.t  odd_mulo1.ml.t  perm1.ml.t  perm2.ml.t  quines.ml.t  repeatedMulo1.ml.t  reverso1.ml.t  thrines.ml.t  twines.ml.t
unif_traces/racket/: appendo1.rkt.t  appendo2.rkt.t  dune  expo2x3.rkt.t  expo3x2.rkt.t  mul5x5.rkt.t  reverso1.rkt.t  reverso2.rkt.t
